added ZTM projects, styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navigation">
-            <logo id="logo">JC</logo>
+            <logo id="logo">/JC</logo>
             <ul class="nav-items">
                 <li>About</li>
                 <li>Projects</li>
@@ -20,28 +20,49 @@
     </header>
     <div class="hero">
         <p>Hello, my name is <span>Jeremy Clemence</span>.</p>
-        <p>I am a front-end developer.</p>
+        <p>I am a self-taught front-end developer.</p>
     </div>
-    <section class="about">
-        <h1>About</h1>
+    <section class="icons">
+        <img class="icon" src="./images/js.png">
+        <img class="icon" src="./images/html.png">
+        <img class="icon" src="./images/css.png">
+        <img class="icon" src="./images/react.png">
+        <img class="icon" src="./images/github.png">
+        <img class="icon" src="./images/git.png">
+      
     </section>
     <section class="projects">
         <h1>Projects</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam dignissimos labore accusamus a culpa harum nam error exercitationem consequuntur facere similique eaque at corrupti deserunt aperiam, vel quia magni quod!</p>
-        <div class="card text-left">
-          <img style="width: 100px; height: 100px;"class="card-img-top" src="background.jpeg" alt="">
-          <div class="card-body">
-            <h4 class="card-title">First Project</h4>
-            <p class="card-text">Body</p>
-          </div>
-        </div>
-        <div class="card text-left">
-            <img style="width: 100px; height: 100px;"class="card-img-top" src="background.jpeg" alt="">
+        <div class="grid-wrapper">
+            <div class="card text-center">
+            <img class="card-img" src="./images/math-sprint.png" alt="">
             <div class="card-body">
-              <h4 class="card-title">Second Project</h4>
-              <p class="card-text">Body</p>
+                <h4 class="card-title">Math Sprint Game</h4>
+                <p class="card-text">This Project was created through the Zero to Mastery Course. Choose the number of math questions and see how many you get right in the shortest amount of time.</p>
             </div>
-          </div>
+            </div>
+            <div class="card text-center">
+                <img class="card-img" src="./images/infinite-scroll.png" alt="">
+                <div class="card-body">
+                <h4 class="card-title">Infinite Scroll</h4>
+                <p class="card-text">This project was created through the Zero to Mastery Course. Using the Unsplash API, new images are loaded on scroll.</p>
+                </div>
+            </div>
+            <div class="card text-center">
+                <img class="card-img" src="./images/nasa.png" alt="">
+                <div class="card-body">
+                <h4 class="card-title">Nasa API</h4>
+                <p class="card-text">This project was created through the Zero to Mastery Course. Using the NASA API, search through thousands of amazing photos and save your favorites to be viewed later under the favorites tab.</p>
+                </div>
+            </div>
+            <div class="card text-center">
+                <img class="card-img" src="./images/music-player.png" alt="">
+                <div class="card-body">
+                <h4 class="card-title">Music Player</h4>
+                <p class="card-text">This project was created through the Zero to Mastery course. Music player plays list of songs from Jacinto Design, founder of ZTM.</p>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="contact">
         <h1 class="contact-heading">Contact Me</h1>
