--- a/index.html
+++ b/index.html
@@ -8,20 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav class="navigation">
-            <logo id="logo">/JC</logo>
-            <ul class="nav-items">
-                <li>About</li>
-                <li>Projects</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
+    <header class="primary-header">
+        <div>
+            <logo id="logo"><a href="#home">/JC</a></logo>
+        </div>
+        <div class="overlay">
+            <nav>
+                <ul class="nav-items" id="nav-overlay" data-visible="false">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <div class="hero">
-        <p>Hello, my name is <span>Jeremy Clemence</span>.</p>
-        <p>I am a self-taught front-end developer.</p>
-    </div>
+        <!-- Hamburger Icon -->
+        <div class="hamburger" id="hamburger">
+            <div class="ham1"></div>
+            <div class="ham2"></div>
+            <div class="ham3"></div>
+        </div>
+        <div class="hero" id="home">
+            <p>Hello, my name is <span>Jeremy Clemence</span>.</p>
+            <p>I am a self-taught front-end developer.</p>
+        </div>
+    
     <section class="icons">
         <img class="icon" src="./images/js.png">
         <img class="icon" src="./images/html.png">
@@ -31,7 +42,7 @@
         <img class="icon" src="./images/git.png">
       
     </section>
-    <section class="projects">
+    <section class="projects" id="projects">
         <h1>Projects</h1>
         <div class="grid-wrapper">
             <div class="card text-center">
@@ -44,31 +55,32 @@
             <div class="card text-center">
                 <img class="card-img" src="./images/infinite-scroll.png" alt="">
                 <div class="card-body">
-                <h4 class="card-title">Infinite Scroll</h4>
-                <p class="card-text">This project was created through the Zero to Mastery Course. Using the Unsplash API, new images are loaded on scroll.</p>
+                    <h4 class="card-title">Infinite Scroll</h4>
+                    <p class="card-text">This project was created through the Zero to Mastery Course. Using the Unsplash API, new images are loaded on scroll.</p>
                 </div>
             </div>
             <div class="card text-center">
                 <img class="card-img" src="./images/nasa.png" alt="">
                 <div class="card-body">
-                <h4 class="card-title">Nasa API</h4>
-                <p class="card-text">This project was created through the Zero to Mastery Course. Using the NASA API, search through thousands of amazing photos and save your favorites to be viewed later under the favorites tab.</p>
+                    <h4 class="card-title">Nasa API</h4>
+                    <p class="card-text">This project was created through the Zero to Mastery Course. Using the NASA API, search through thousands of amazing photos and save your favorites to be viewed later under the favorites tab.</p>
                 </div>
             </div>
             <div class="card text-center">
                 <img class="card-img" src="./images/music-player.png" alt="">
                 <div class="card-body">
-                <h4 class="card-title">Music Player</h4>
-                <p class="card-text">This project was created through the Zero to Mastery course. Music player plays list of songs from Jacinto Design, founder of ZTM.</p>
+                    <h4 class="card-title">Music Player</h4>
+                    <p class="card-text">This project was created through the Zero to Mastery course. Music player plays list of songs from Jacinto Design, founder of ZTM.</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
         <h1 class="contact-heading">Contact Me</h1>
-        <form class="contact-form" id="contact" method="post" name="contact">
+        <form class="contact-form" id="contact" action="https://formsubmit.co/jclem2806@gmail.com" method="POST" name="contact">
+            <input type="hidden" name="_subject" value="New Email from Portfolio">
             <input id="contact" type="text" name="name" placeholder="Name">
-            <input id="contact" type="email" name="email" placeholder="Email">
+            <input id="contact" type="email" name="email" placeholder="Email" required>
             <textarea id="contact" name="message" rows="10" placeholder="Message"></textarea>
             <button class="contact-button" type="submit">Send</button>
         </form>
